# gas-templates

./: .coveragerc  .gitattributes  MANIFEST.in  README.md  setup.cfg  setup.py  travis.yml
docs/examples/: free_example.py  geochem_example.py  ternary_example.py
docs/source/: conf.py  index.rst
pyogas/: __init__.py  _version.py
pyogas/components/: __init__.py  _core.py  axes.py  diagrams.py  points.py  text.py  variables.py  vector.py
pyogas/util/: __init__.py  xml.py
pyogas/writer/: __init__.py  common.py  freediagram.py  freeternary.py  geochemdiagram.py  mpl2iogas.py
