[aliases]
test=pytest

[tool:pytest]
addopts = test --cov=pyogas --cov-report html --cov-report term-missing --cov-config .coveragerc
python_files = *.py

[versioneer]
VCS = git
style = pep440
versionfile_source = pyogas/_version.py
versionfile_build = pyogas/_version.py
tag_prefix =
parentdir_prefix = pyogas-

[metadata]
description_file = README.md
license_file = LICENSE
